<resources>
    <string name="app_name">PlantBUDDY</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="myPlants">My Plants</string>
    <string name="addNewPlants">Add New Plants</string>
    <string name="settings">Settings</string>
    <string name="seeReminders">See Reminders</string>
    <string name="add_plant">Add Plant</string>
    <string name="update_plant">Update Plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="water_frequency">Watering Frequency (DAYS)</string>
    <string name="default_temp">Environment Temperature (Celsius)</string>
    <string name="text_intro_spinner">Living habitat:</string>
    <string name="text_intro_spinner_sun">Sun exposure level:</string>
    <string name="text_intro_time">Select the preferred time interval to water your buddy:</string>
    <string name="text_add_plant_intro">Please add your buddy\'s details</string>
    <string name="text_update_plant_intro">Please update your buddy\'s details</string>
    <string name="login">Log in</string>
    <string name="more_menu">more menu</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="getting_your_buddy_s">Getting your buddy\'s</string>
    <string name="welcome">Welcome</string>
    <string name="getWeather">Weather</string>
    <string name="needs_to_be_watered">needs to be watered</string>
    <string name="your_buddy">Your buddy</string>
    <string name="latitudeBabel">Latitude</string>
    <string name="longitudeBabel">Longitude</string>
    <string name="location">Location</string>
    <string name="lon">lon</string>
    <string name="lat">lat</string>
    <string name="LocationTitle">Current Location in Latitude and Longitude:</string>
    <string name="log_out_btn">Log Out</string>
    <string name="not_logged_in_tv">not logged in</string>
    <string-array name="plant_indoor_outdoor">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>
    <string-array name="sun_exposure_level">
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>

</resources>