<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/buttonAddNewPlants"
        style="@style/PrimaryButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/addNewPlants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyPlants" />

    <Button
        android:id="@+id/buttonSeeReminders"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/seeReminders"
        style="@style/PrimaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddNewPlants" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        style="@style/PrimaryButton"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeeReminders" />

    <Button
        android:id="@+id/buttonMyPlants"
        style="@style/PrimaryButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:text="@string/myPlants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

</androidx.constraintlayout.widget.ConstraintLayout>