<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/LocationTitle"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/latitudeText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lat"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/longitudeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/lon"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>